# plang

./: LLM.py  README.md  executor.py  plang.py  program.py  pyproject.toml  readme.md  readme_zh.md  utils.py
examples/ReAct/: lib.py  react.p.backtick.md  react_math.p.backtick.md
examples/autoThinkMode/: autoThinkMode.p.backtick.md
examples/chatbotWithHistoryContext/: chatbot.p.backtick.md
examples/functionReadme/: breakReadme.p.backtick.md  callReadme.p.backtick.md  commentReadme.p.backtick.md  compareReadme.backtick.md  completeReadme.backtick.md  continueReadme.backtick.md  forReadme.backtick.md  ifReadme.backtick.md  matchReadme.p.backtick.md  readReadme.backtick.md  selectReadme.backtick.md  setReadme.backtick.md  whileReadme.p.backtick.md
examples/gsm8kSolutionFormat/: gsm8KSolutionFormat.p.backtick.md
examples/localAndSharedContext/: storiesAndCommonalities.p.backtick.md
examples/miniAutoGen/: lib.py  miniAutoGen.p.backtick.md
examples/sampleTest/: lib.py  sampleTest.p.backtick.md  whileTest.p.backtick.md
libLLM/: Llama_GGML.py
libLang/: authorInfo.py  break_earlyExit.py  call.py  comment.py  compare.py  complete.py  continue_earlyExit.py  for_do.py  if_do.py  match.py  read.py  select.py  set.py  while_do.py
plang/: __init__.py  executor.py  plang.py  program.py  utils.py
plang/libLLM/: Llama_GGML.py
plang/libLang/: authorInfo.py  break_earlyExit.py  call.py  comment.py  compare.py  complete.py  continue_earlyExit.py  for_do.py  if_do.py  match.py  read.py  select.py  set.py  while_do.py
